# dub

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  rust-toolchain.toml
.claude/: settings.json
.claude/hooks/: rust-fmt.sh
.cursor/: hooks.json
.cursor/hooks/: rust-fmt.sh
.cursor/rules/: audio-rt.mdc  dsp.mdc  ffi.mdc  prd-discipline.mdc  rust-general.mdc  swift.mdc  testing.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
apple/: CLAUDE.md  README.md  project.yml
apple/Dub/: DubAppDelegate.swift  Info.plist  MainView.swift  MainWindowController.swift
apple/Dub/About/: AboutSheet.swift  LaunchSplashOverlay.swift
apple/Dub/App/: AppNotifications.swift
apple/Dub/Assets.xcassets/AboutSplash.imageset/: Contents.json
apple/Dub/DesignSystem/: Tokens.swift
apple/Dub/Onboarding/: OnboardingSheet.swift
apple/Dub/Performance/: BeatgridCalibrationLog.swift  BeatmatchViz.swift  DeckHeader.swift  DeckSignalPanel.swift  FileBrowserView.swift  GridNudgeTier.swift  LibraryAppModel.swift  LibraryRowSelection.swift  LibrarySelectionModel.swift  LibraryView.swift  PerformancePadsView.swift  PerformanceView.swift  PhaseClockView.swift  Placeholders.swift  RepeatModifierButton.swift  SourceControlView.swift  StatusStrip.swift  StillpointModel.swift  StillpointView.swift  TapToGridController.swift  TrackOverviewView.swift
apple/Dub/Preferences/: PreferencesSheet.swift  SignalQualityView.swift
apple/Dub/Resources/: AppIcon.icns
apple/Dub/Waveform/: EngineHostTimeMapping.swift  PlayheadMarker.swift  Shaders.metal  WaveformMetalHostView.swift  WaveformRenderThread.swift  WaveformRenderer.swift  WaveformView.swift
apple/DubTests/: PerformanceSnapshotTests.swift  StillpointModelTests.swift  StillpointSnapshotTests.swift
crates/: CLAUDE.md
crates/dub-audio/: Cargo.toml  devices.toml
crates/dub-audio/src/: devices.rs  lib.rs  macos.rs
crates/dub-bpm/examples/: diagnose_bpm.rs
crates/dub-bpm/src/: beats.rs  downbeat.rs  estimator.rs  eval.rs  lib.rs  octave_profile.rs  offline.rs  onset.rs  stream.rs  tempo.rs  tracker.rs
crates/dub-bpm/tests/: apocalypse_tap_tempo.rs  beat_location_corpus.rs  brown_paper_bag_set_the_one.rs  corpus.tsv.example  genre_octave.rs  real_music_corpus.rs  synthetic_beat_location.rs  visual_kick_edge.rs
crates/dub-bpm/tests/fixtures/: dnb_corpus.tsv  dubstep_corpus.tsv  house_corpus.tsv  rap_corpus.tsv  reggae_corpus.tsv
crates/dub-cli/: Cargo.toml
crates/dub-cli/src/: audio_routing.rs  calibrate.rs  calibration.rs  decode_timecode.rs  device_profiles.rs  diagnose.rs  import.rs  input_cmds.rs  main.rs  scope.rs  thru.rs  timecode_deck.rs
crates/dub-controller/: Cargo.toml
crates/dub-controller/src/: lib.rs
crates/dub-dsp/: CLAUDE.md  Cargo.toml
crates/dub-dsp/src/: lib.rs  loudness.rs
crates/dub-engine/: CLAUDE.md  Cargo.toml
crates/dub-engine/src/: anchor.rs  command.rs  deck.rs  display_rate.rs  drift.rs  handle.rs  lib.rs  looping.rs  realtime.rs  timecode.rs
crates/dub-engine/tests/: scratch_drift.rs
crates/dub-ffi/: CLAUDE.md  Cargo.toml
crates/dub-ffi/src/: lib.rs
crates/dub-fingerprint/: CLAUDE.md  Cargo.toml
crates/dub-fingerprint/src/: lib.rs
crates/dub-io/: Cargo.toml
crates/dub-io/src/: lib.rs  track.rs
crates/dub-io/tests/: format_coverage.rs
crates/dub-io/tests/fixtures/: README.md  tone-aac.m4a  tone-alac.m4a  tone.aiff  tone.flac
crates/dub-library/: Cargo.toml
crates/dub-library/examples/: profile_import.rs
crates/dub-library/src/: analysis.rs  cues.rs  db.rs  dedupe.rs  error.rs  filename_parser.rs  history.rs  imported_crates.rs  importer.rs  itunes.rs  itunes_import.rs  lib.rs  paths.rs  rekordbox.rs  rekordbox_import.rs  schema.rs  serato_import.rs  sources.rs  traktor.rs  traktor_import.rs  version_tokens.rs  volumes.rs
crates/dub-library/src/serato/: autotags.rs  beatgrid.rs  database.rs  geob.rs  markers2.rs  mod.rs
crates/dub-peaks/: Cargo.toml
crates/dub-peaks/src/: lib.rs  sidecar.rs
crates/dub-spectral/: Cargo.toml
crates/dub-spectral/src/: key.rs  lib.rs
crates/dub-stretch/: CLAUDE.md  Cargo.toml
crates/dub-stretch/src/: lib.rs
crates/dub-thru/: Cargo.toml
crates/dub-thru/src/: lib.rs
crates/dub-timecode/: Cargo.toml
crates/dub-timecode/src/: absolute.rs  classifier.rs  decoder.rs  defs.rs  format.rs  lib.rs  signal.rs  smoothing.rs
crates/dub-timecode/tests/: hum_bias.rs
docs/: ARCHITECTURE.md  BPM-DETECTOR-V2-INVESTIGATION.md  LIBRARY-FORMATS.md  LIBRARY-SCHEMA.md  PRD-BEATS.md  PRD.md  README.md  SHIPPED.md  UI-BACKLOG.md  WAVEFORM-JITTER-CAPTURE.md
docs/history/: LESSONS.md  SHIPPED.md
docs/html/: README.md  architecture.html  backlog.html  beats.html  index.html  roadmap.html  schema.html
docs/html/_assets/: dub.css  dub.js
docs/investigations/: BEATMATCH-AID-STILLPOINT.md  BPM-DETECTOR-V2-INVESTIGATION.md
docs/spec/: ARCHITECTURE.md  LIBRARY-FORMATS.md  LIBRARY-SCHEMA.md  LICENSE-DEPENDENCIES.md  PRD-BEATS.md  PRD.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_itunes_xml.rs  fuzz_rekordbox_xml.rs  fuzz_serato_database.rs  fuzz_serato_markers2.rs  fuzz_traktor_nml.rs
scripts/: check-docs.sh  generate-app-icon.sh  render-macos-icon.swift
tools/: CLAUDE.md  sample-splash-edge.swift
tools/rt-audit/: Cargo.toml
tools/rt-audit/src/: main.rs
