[package]
name = "dub-library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Track library: SQLite + path-by-volume-UUID + import adapters (M11a onward)."

[dependencies]
rusqlite = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
dub-fingerprint = { workspace = true }
dub-io = { workspace = true }
# M11c.1 — auto-beatgrid analysis hook lives in `dub-library::analysis`
# and delegates to `dub_bpm::analyze_beat_grid`. The BPM DSP shipped in
# M7.5 / M8.1; we are wiring it into the import-and-load lifecycle.
dub-bpm = { workspace = true }
# M11c.2 — key detection lives in `dub-spectral::key`. The
# `dub-library::analysis` pipeline calls `analyze_key` in the same
# pass that runs `analyze_beat_grid`, so the file decodes exactly
# once per analysis call.
dub-spectral = { workspace = true }
# PRD-BEATS C1 (round 4) — analyze_track also renders the waveform
# peaks and writes a sidecar so the next `loadTrack` on this
# fingerprint hits the cache and the deck shows the waveform
# instantly.
dub-peaks = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

# PRD-BEATS C1 (round 4) — `Library::open_in_memory` mints a
# per-Library tempdir for waveform-sidecar writes so the test
# suite never pollutes the developer's `~/Library/Caches/Dub/
# waveforms/` tree. `open_in_memory` is technically a public
# constructor, but in production we always go through
# `open_default` / `open_at`; the tempdir cost is paid only by
# the test-only in-memory path.
[dependencies.tempfile]
version = "3"

[dev-dependencies]
# Temp dirs for fixture-driven tests of the migration runner /
# fresh-DB workflow without polluting the developer's real library.
tempfile = "3"
# Synthetic WAV fixture generation for the M11c importer integration
# tests. `hound` is the standard-in-the-workspace WAV writer; we
# generate small mono sine-wave files on the fly rather than ship
# binary fixtures.
hound = { workspace = true }
