[package]
name = "dub-spectral"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared STFT + log-band + magnitude-compression pipeline for dub-bpm and dub-peaks."

[dependencies]
realfft = { workspace = true }
# M11c.2 — typed errors for `key::analyze_key` (invalid SR / channels /
# short input). Aligns with `dub-bpm::AnalysisError` so the
# `dub-library::analysis` pipeline can `?`-bubble both into its own
# `LibraryError::DecodeFailed` variant.
thiserror = { workspace = true }
